--- a/application/spring-app/build.gradle
+++ b/application/spring-app/build.gradle
@@ -1,15 +1,8 @@
-buildscript {
-	repositories {
-		jcenter()
-	}
-	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.2.RELEASE"
-	}
+plugins {
+	id 'org.jetbrains.kotlin.jvm'
+	id("org.springframework.boot") version "2.5.2"
+	id("io.spring.dependency-management") version "1.0.11.RELEASE"
 }
-
-apply plugin: 'java-library'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 ext.moduleName = 'slalom.example.spring'
 
@@ -19,6 +12,6 @@ dependencies {
 		project(':usecase'),
 		project(':controller'),
 		'org.springframework.boot:spring-boot-starter-web',
-		'com.fasterxml.jackson.core:jackson-core:2.9.5',
+//		'com.fasterxml.jackson.core:jackson-core:2.9.5',
 	)
 }
