--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+	id 'org.jetbrains.kotlin.jvm' version '1.5.20' apply false
+}
+
 subprojects {
 	apply plugin: 'java'
 
@@ -9,20 +13,5 @@ subprojects {
 
 	repositories {
 		jcenter()
-	}
-	afterEvaluate {
-		repositories {
-			jcenter()
-		}
-
-		compileJava {
-			inputs.property("moduleName", moduleName)
-			doFirst {
-				options.compilerArgs = [
-					'--module-path', classpath.asPath,
-				]
-				classpath = files()
-			}
-		}
 	}
 }
